# grillme

./: .env.example  .gitignore  .pylintrc  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: session.py
backend/app/routes/: chat.py  problems.py  sessions.py
backend/app/services/: jd.py  llm.py  scraper.py
backend/tests/: conftest.py  test_jd.py  test_llm.py  test_scraper.py  test_sessions.py
